--- a/style.css
+++ b/style.css
@@ -1,51 +1,63 @@
-header
+*
 {
-    text-align: center;
-    font-size: 60px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    margin: 0px;
+    padding: 0px;
+
 }
-header img 
-{
-    width: 300px;
-    height: auto;
-}
-button
-{
-   float: right;
-   height: 60px;
-   width: 150px;
-   color: black;
-   background-color: skyblue;
-   margin: 10px;
-}
-h2
-{
-    text-align: center;
-    font-size: 60px;
-    font-family: 'Times New Roman', Times, serif;
+body{
+    background-image: url(../image/fond.png);
+    background-position-y: -143rem ;
 }
 :root
 {
     --hauteur-menu: 60px;
 }
-*
+header
 {
-    margin: 0px;
-    padding: 0px;
-    background-color: whitesmoke;
+    display: flex;
+    justify-content: space-between;
+}
+#image{
+margin-left: 500px;
+}
+#image img{
+    width: 250px;
+}
+#bouton button
+{
+   float: right;
+   height: 30px;
+   width: 100px;
+   color: black;
+   background-color:white;
+   margin: 10px;
+   box-shadow: inset 3px 3px 4px rgba(255, 255, 255, 0.6), inset -3px -3px 4px rgba(0, 0, 0, 0.6);
+   border-radius: 20px;
+}
+#bouton button:hover 
+{
+    background-color:rgb(156, 151, 149);
+}
+
+h2
+{
+    text-align: center;
+    font-size: 40px;
+    font-family: 'Times New Roman', Times, serif;
 }
 nav
 {
+    position:sticky;
     width: 100%;
     font-size: 20px;
-    position: sticky;
-    top: 0%
+    top: 0%;
+    /* border: 1px solid black; */
 }
 nav > ul 
 {
     display: flex;
     text-align: center;
-    box-shadow: 0px 1px 2px 1px rgba(0,0,0,0.3);
+    box-shadow: 0px 2px 3px 2px rgba(0,0,0,0.3);
     height: var(--hauteur-menu);
 }
 nav ul
@@ -54,7 +66,8 @@ nav ul
 }
 nav > ul > li 
 {
-    background-color: skyblue;
+   /* background-color: rgb(122, 97, 85);*/
+   background-color: white;
     position: relative;
     height: 100%;
     flex: 1;
@@ -70,7 +83,7 @@ li a
 {
     text-decoration: none;
     color: black;
-    background-color: skyblue;
+    /*background-color: rgb(122, 97, 85);*/
 }
 .menu-deroulant > a:after
 {
@@ -79,7 +92,7 @@ li a
     margin-left: 7px;
     display: inline-block;
 }
-.sous-menu 
+.sous-menu
 {
     margin-top: var(--hauteur-menu);
     width: 100%;
@@ -87,28 +100,32 @@ li a
     border-radius: 2px;
     overflow: hidden;
     max-height: 0;
+    /* background: linear-gradient(#407cc9, #2843ca); */
+    background-color: white;
 }
   
-.sous-menu > li > a 
+.sous-menu > li > a
 {
     height: 50px;
     padding-left: 2rem;
     width: 100%;
     align-items: center;
     display: flex;
-    background-color: lightblue;
+   /* background: linear-gradient(#345ae0, #2c82e4);*/
+    /*background-color:rgb(140, 120, 112);*/
+    color : black;
 }
-@keyframes apparitionSousMenu {
+@keyframes apparitionSousMenu{
     0% {
       box-shadow: 0px 3px 3px 1px rgba(0,0,0,0);
-      border-top: 3px solid blue;
+      border-top: 3px solid rgb(0, 0, 0);
     }
     30% {
       box-shadow: 0px 3px 3px 1px rgba(0,0,0,0.3);
     }
     100% {
       max-height: 50em;
-      border-top: 3px solid blue;
+      border-top: 3px solid rgb(5, 5, 5);
       box-shadow: 0px 3px 3px 1px rgba(0,0,0,0.3);
     }
   }
@@ -116,9 +133,22 @@ li a
 {
     animation: apparitionSousMenu 1s forwards;
 }
+.bouton input{
+    margin: 20px;
+    padding-left :10px;
+    font-size: 15px;
+    color: rgb(134,85,29)
+}
+.bouton button{
+    padding: 5px;
+    border-radius: 10px;
+}
+.bouton button:hover{
+    background-color:rgb(156, 151, 149);
+}
 img
 {
-    width: 150px;
+    width: 120px;
 }
 p
 {
@@ -129,15 +159,14 @@ p
 footer 
 {
     display: flex;
-    padding: 20px;
     justify-content: center;
     color:black;
     width: 100%;
 }
-footer > ul
+/*footer ul
 {
-    background-color: lightblue;
-}
+    /*background-color: lightblue;*/
+
 audio
 {
     border: thick double lightblue;
@@ -158,10 +187,9 @@ figcaption
 }
 .image
 {
-width: 10px;
-background-color: lightblue;
+width: 5px;
+/*background-color: rgb(132, 112, 104);*/
 }
-.text
+/*.text
 {
-    background-color: lightblue;
-}
+    /*background-color:rgb(132, 112, 104);*/
