--- a/commentaire.css
+++ b/commentaire.css
@@ -3,10 +3,6 @@
     margin: 0px;
     padding: 0px;
 }
-body{
-    background-image: url(../image/fond.png);
-    background-position-y: 118rem ;
-}
 img{
     display: block;
     margin: auto;
@@ -34,7 +30,7 @@ form button{
 form h1{
     background-color: rgb(242, 242, 242) ;
     text-align: center;
-    color: rgb(134,85,29);
+    color: black;
     padding-bottom: 20px;
     font-style: italic;
 }
@@ -49,7 +45,7 @@ margin-bottom:15px;
 .Formulaire label{
     background-color: rgb(242, 242, 242);
     font-size: 20px;
-    color: rgb(134,85,29);
+    color: black;
     font-weight: bold;
 }
 .commentaire{
@@ -61,25 +57,23 @@ margin-bottom:15px;
 .commentaire label{
     background-color: rgb(242, 242, 242);
     font-size: 20px;
-    color: rgb(134,85,29);
+    color: black;
     font-weight: bold;  
 }
 .commentaire textarea{
-    padding-bottom: 100px;  border-radius: 5px;
-    background-color: rgb(255, 239, 222);
+    padding-bottom: 100px;  border-radius: 5px;;
     padding-left: 5px;
 }
 input{
     border-radius: 5px;
-    background-color: rgb(255, 239, 222);
     padding-left: 5px;
 }
-button{
-    background-color: rgb(255, 239, 222);
+form button{
+
     border-radius: 20px;
     padding: 2px;
     width: 150px;
-    color: rgb(134,85,29);
+    color: black;
     font-weight: bold;
     font-size: 15px;
     display: flex;
@@ -92,7 +86,7 @@ button{
     display: flex;
     flex-direction: row-reverse;
     gap: 0.3rem;
-    --stroke: #666;
+    --stroke:black;
     --fill: #ffc73a;
   }
   
