--- a/contact.css
+++ b/contact.css
@@ -1,81 +1,77 @@
-*
-{
-    margin: 0px;
-    padding: 0px;
-   
-}
-
-
-img{
-    display: block;
-    margin: auto;
-}
 #main{
     flex-direction: column;
     display: flex;
-    padding-top: 50px;
+    margin-top: 50px;
 }
 form{
-width: 350px;
+width: 500px;
 flex-direction: column;
 display: flex;
 align-self: center;
 background-color:  rgb(242, 242, 242);
 border : 2px solid black;
-box-shadow: 3px 3px 3px black;
 border-radius: 10px;
-padding : 20px;
+box-shadow: 3px 3px 3px black;
+padding: 20px;
 }
-form button{
-    display:flex;
-    align-self: center;
-}  
 form h1{
     background-color: rgb(242, 242, 242) ;
     text-align: center;
     color: black;
-    padding-bottom: 40px;
+    padding-bottom: 20px;
     font-style: italic;
-}    
-.Formulaire
+}
+  
+.formulaire
 {
 display: flex;
 justify-content: space-between;
 background-color: rgb(242, 242, 242);
-margin-bottom: 15px;
+margin-bottom:15px;
 }
-.Formulaire label{
+.formulaire label{
     background-color: rgb(242, 242, 242);
-    font-size: 20px;;
+    font-size: 20px;
     color: black;
     font-weight: bold;
+}
+.commentaire{
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(242, 242, 242);
+    
+}
+.commentaire label{
+    background-color: rgb(242, 242, 242);
+    font-size: 20px;
+    color: black;
+    font-weight: bold;  
+}
+.commentaire textarea{
+    padding-bottom: 100px;  border-radius: 5px;;
+    padding-left: 5px;
 }
 input{
     border-radius: 5px;
     padding-left: 5px;
 }
+.form-select{
+    padding: 5px;
+    margin-bottom: 5px;
+}
 form button{
+
     border-radius: 20px;
     padding: 2px;
-    width: 200px;
-    margin-top: 30px;
+    width: 150px;
     color: black;
     font-weight: bold;
     font-size: 15px;
     display: flex;
     justify-content: center;
+    margin-top: 20px;
+    align-self: center;
 }
-form a{
-    text-decoration: none;
-    color: black;
-    display: flex;
-    align-items: center;
-    margin-left: 10px;
-}
-#compte{
-    display: flex;
-    margin-top:15px;
-    font-size: 15px;
-    justify-content: center;
 
-}
+
+
