--- a/importer.css
+++ b/importer.css
@@ -2,10 +2,12 @@
 {
     margin: 0px;
     padding: 0px;
-   
 }
-
-
+body{
+    background-image: url(../image/fond.png);
+    background-position-y: 118rem ;
+    background-position-x: -1rem;
+}
 img{
     display: block;
     margin: auto;
@@ -13,30 +15,30 @@ img{
 #main{
     flex-direction: column;
     display: flex;
-    padding-top: 50px;
+    margin-top: 50px;
 }
 form{
-width: 350px;
+width: 500px;
 flex-direction: column;
 display: flex;
 align-self: center;
 background-color:  rgb(242, 242, 242);
 border : 2px solid black;
-box-shadow: 3px 3px 3px black;
 border-radius: 10px;
-padding : 20px;
+box-shadow: 3px 3px 3px black;
+padding: 20px;
 }
-form button{
-    display:flex;
-    align-self: center;
-}  
 form h1{
     background-color: rgb(242, 242, 242) ;
     text-align: center;
     color: black;
-    padding-bottom: 40px;
+    padding-bottom: 20px;
     font-style: italic;
-}    
+}  
+form button{
+    display:flex;
+    align-self: center;
+}  
 .Formulaire
 {
 display: flex;
@@ -46,36 +48,29 @@ margin-bottom: 15px;
 }
 .Formulaire label{
     background-color: rgb(242, 242, 242);
-    font-size: 20px;;
+    font-size: 20px;
     color: black;
     font-weight: bold;
 }
+
 input{
     border-radius: 5px;
     padding-left: 5px;
 }
-form button{
+input#image{
+    background-color: rgb(242, 242, 242);
+}
+input#audio{
+    background-color: rgb(242, 242, 242);
+}
+button{
     border-radius: 20px;
     padding: 2px;
-    width: 200px;
-    margin-top: 30px;
+    width: 150px;
     color: black;
     font-weight: bold;
     font-size: 15px;
+    margin-top: 20px;
     display: flex;
     justify-content: center;
-}
-form a{
-    text-decoration: none;
-    color: black;
-    display: flex;
-    align-items: center;
-    margin-left: 10px;
-}
-#compte{
-    display: flex;
-    margin-top:15px;
-    font-size: 15px;
-    justify-content: center;
-
 }
