--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 body{
     background-image: url(../image/fond.png);
-    background-position-y: -143rem ;
+    background-repeat: no-repeat;
 }
 :root
 {
@@ -18,16 +18,26 @@ header
     justify-content: space-between;
 }
 #image{
-margin-left: 500px;
+
+   width: 100%;
+   display: flex;
+   justify-content: center;
 }
 #image img{
     width: 250px;
 }
+#bouton {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+}
+#bouton a {
+    display: inline;
+}
 #bouton button
 {
-   float: right;
    height: 30px;
-   width: 100px;
+   width: 120px;
    color: black;
    background-color:white;
    margin: 10px;
@@ -41,6 +51,7 @@ margin-left: 500px;
 
 h2
 {
+    margin-top: 20px;
     text-align: center;
     font-size: 40px;
     font-family: 'Times New Roman', Times, serif;
@@ -51,7 +62,7 @@ nav
     width: 100%;
     font-size: 20px;
     top: 0%;
-    /* border: 1px solid black; */
+
 }
 nav > ul 
 {
@@ -66,7 +77,6 @@ nav ul
 }
 nav > ul > li 
 {
-   /* background-color: rgb(122, 97, 85);*/
    background-color: white;
     position: relative;
     height: 100%;
@@ -83,7 +93,6 @@ li a
 {
     text-decoration: none;
     color: black;
-    /*background-color: rgb(122, 97, 85);*/
 }
 .menu-deroulant > a:after
 {
@@ -100,7 +109,6 @@ li a
     border-radius: 2px;
     overflow: hidden;
     max-height: 0;
-    /* background: linear-gradient(#407cc9, #2843ca); */
     background-color: white;
 }
   
@@ -111,21 +119,19 @@ li a
     width: 100%;
     align-items: center;
     display: flex;
-   /* background: linear-gradient(#345ae0, #2c82e4);*/
-    /*background-color:rgb(140, 120, 112);*/
     color : black;
 }
 @keyframes apparitionSousMenu{
     0% {
       box-shadow: 0px 3px 3px 1px rgba(0,0,0,0);
-      border-top: 3px solid rgb(0, 0, 0);
+      border-top: 3px solid white
     }
     30% {
       box-shadow: 0px 3px 3px 1px rgba(0,0,0,0.3);
     }
     100% {
       max-height: 50em;
-      border-top: 3px solid rgb(5, 5, 5);
+      border-top: 3px solid white;
       box-shadow: 0px 3px 3px 1px rgba(0,0,0,0.3);
     }
   }
@@ -133,11 +139,13 @@ li a
 {
     animation: apparitionSousMenu 1s forwards;
 }
+main {
+    min-height: calc(100vh - 243.95px - 60px - 60px);
+}
 .bouton input{
     margin: 20px;
     padding-left :10px;
     font-size: 15px;
-    color: rgb(134,85,29)
 }
 .bouton button{
     padding: 5px;
@@ -146,15 +154,8 @@ li a
 .bouton button:hover{
     background-color:rgb(156, 151, 149);
 }
-img
-{
-    width: 120px;
-}
-p
-{
-    text-align: center;
-    color: red;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+.home{
+    width: 60px;
 }
 footer 
 {
@@ -163,33 +164,10 @@ footer
     color:black;
     width: 100%;
 }
-/*footer ul
-{
-    /*background-color: lightblue;*/
+img{
+    width: 120px;
+}
 
-audio
-{
-    border: thick double lightblue;
-}
-.image-container
-{
-    display: flex;
-    justify-content: center;
-}
-figure
-{
-    margin : 10px;
-    text-align: center;
-}
-figcaption
-{
-    font-family:Georgia, 'Times New Roman', Times, serif
-}
-.image
-{
-width: 5px;
-/*background-color: rgb(132, 112, 104);*/
-}
-/*.text
-{
-    /*background-color:rgb(132, 112, 104);*/
+
+
+
